--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,3 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+@import 'reset';
+@import 'material';
+@import 'colours';
+@import 'variables';
+@import 'utils';
+@import 'fonts';
+@import 'gui';
 
-@import '../app/app';
