Added form component and navigation

--- a/client/app/components/advertisementManager/advertisementList/advertisementList.html
+++ b/client/app/components/advertisementManager/advertisementList/advertisementList.html
@@ -1,4 +1,13 @@
 <div class="advertisement-list" layout="column" flex>
 	<div class="ul-card" flex layout="column">
+		<header layout="row" layout-align="end center">
+			<span>
+				<md-button
+					class="al-add__button md-icon-button"
+					ui-sref="advertisementDetails.new">
+					<md-icon class="al-add__icon">add_circle_outline</md-icon>
+				</md-button>
+			</span>
+		</header>
 	</div>
 </div>
