--- a/client/app/components/headerBar/headerBar.html
+++ b/client/app/components/headerBar/headerBar.html
@@ -4,7 +4,7 @@
 	role="banner"
 >
 	<md-toolbar class="hbar">
-		<div class="hbar-branding" flex layout="row" layout-align="start center" layout-padding>
+		<div class="hbar-branding" flex layout="row" layout-align="start center" layout-padding ui-sref="advertisementList">
 			<h2 class="hbar__brand">{{$ctrl.headerTitle}}</h2>
 		</div>
 	</md-toolbar>
