--- a/client/scss/_colours.scss
+++ b/client/scss/_colours.scss
@@ -9,4 +9,11 @@ $colour--bg : #f5f5f5;
 $colour--text : #000;
 
 $colour--white: white;
+
 $colour--primary: #ffc107;
+
+$colour--neutral--light: #f3f2f1;
+$colour--neutral: #dadada;
+$colour--neutral--passive: #aaa;
+$colour--neutral--dark: #555555;
+$colour--neutral--darkest: #333333;
