in memory db with nedb

--- a/client/app/components/advertisementManager/advertisementDetails/advertisementDetails.html
+++ b/client/app/components/advertisementManager/advertisementDetails/advertisementDetails.html
@@ -1,5 +1,5 @@
 <div class="advertisement-details" layout="column" flex>
-	<div class="ul-card" flex layout="column">
+	<div class="al-card" flex layout="column">
 		<advertisement-form
 			on-init="$ctrl.initAdvertisementForm(advertisementForm)"
 			on-change="$ctrl.advertisementFormChange(advertisementForm)"
