--- a/client/app/components/advertisementManager/advertisementDetails/advertisementForm/advertisementForm.html
+++ b/client/app/components/advertisementManager/advertisementDetails/advertisementForm/advertisementForm.html
@@ -49,7 +49,7 @@
 			<md-input-container class="md-block">
 				<label>Street</label>
 				<input
-					ng-model="$ctrl.advertisement.customColumnOne"
+					ng-model="$ctrl.advertisement.street"
 					name="street"
 					ng-change="$ctrl.advertisementFormChange()"
 				>
