--- a/client/app/components/advertisementManager/advertisementList/_advertisementList.scss
+++ b/client/app/components/advertisementManager/advertisementList/_advertisementList.scss
@@ -5,7 +5,7 @@
 @import '../../../../scss/colours';
 @import '../../../../scss/variables';
 
-.ul-card {
+.al-card {
 	background-color: $colour--white;
 	margin-top: $spacing--small;
 }
