--- a/client/app/components/advertisementManager/advertisementList/advertisementList.html
+++ b/client/app/components/advertisementManager/advertisementList/advertisementList.html
@@ -1,5 +1,5 @@
 <div class="advertisement-list" layout="column" flex>
-	<div class="ul-card" flex layout="column">
+	<div class="al-card" flex layout="column">
 		<header layout="row" layout-align="end center">
 			<span>
 				<md-button
