--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'reset';
 @import 'material';
+@import '../../node_modules/angular-material-data-table/dist/md-data-table.min.css';
 @import 'colours';
 @import 'variables';
 @import 'utils';
