Added socket io and related logic

--- a/client/app/components/advertisementManager/advertisementList/advertisementList.html
+++ b/client/app/components/advertisementManager/advertisementList/advertisementList.html
@@ -1,6 +1,6 @@
 <div class="advertisement-list" layout="column" flex>
 	<div class="al-card" flex layout="column">
-		<header layout="row" layout-align="end center">
+		<header layout="row" layout-align="end center" layout-padding>
 			<span>
 				<md-button
 					class="al-add__button md-icon-button"
